<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/no_statistics_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:minHeight="24dp"
        android:lines="4"
        android:text="@string/no_statistics_yet"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/send_qr_code_to_others0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/send_qr_code_text_view"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_statistics_text_view"
        app:layout_constraintBottom_toTopOf="@id/qr_code_button"
        />

    <Button
        android:id="@+id/qr_code_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qrcode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_statistics_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/diagram_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_diagram"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/statistics_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diagram_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>